# Synthesizer

./: .gitignore  .gitmodules  CMakeLists.txt
gl/: CMakeLists.txt  gl_aux.hpp  glfw_window.hpp  imgui_window.cpp  immutable_array.hpp  log.cpp  stb_image.cpp  uniform.hpp  utils.cpp
imgui/: CMakeLists.txt
src/: CMakeLists.txt  dsa_uniform.hpp  glfw_window.cpp  imgui_window.hpp  log.hpp  main.cpp  pinch_data.hpp  shader.cpp  shader.hpp  shader_program.hpp  stb_image.hpp  stb_image_write.cpp  stb_image_write.hpp  touch_data.hpp  touch_points.hpp  utils.hpp
src/glsl/: pinch.fs  touch.vs
synth/: CMakeLists.txt  audio_file.hpp  main.cpp  notes.cpp
synth/glsl/: graph.fs  graph.vs  pinch.vs  touch.fs
