#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
# imgui static library
#------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
add_library (imgui STATIC imgui.cpp imgui_demo.cpp imgui_draw.cpp imgui_widgets.cpp)
target_link_libraries(imgui framework)
